<resources>
    <string name="app_name">SimpleAutomationApp</string>
    <string name="action_list">Autos</string>
    <string name="action_create_android_auto">Create Android Auto</string>
    <string name="action_create_iot_auto">Create IOT Auto</string>
    <string name="action_settings">Create Android Auto</string>
    <string name="SelectType">Select Type</string>
    <string name="select_android">Android</string>
    <string name="select_iot">IOT</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="title">Add Title</string>
    <string name="review">Review</string>
    <string name="trigger">Trigger</string>
    <string name="action">Action</string>
    <string name="create">Create</string>
    <string name="no_title">Please provide a title</string>
    <string name="settings">Settings</string>

    <string name="channel_name">S.A.P Channel</string>
    <string name="channel_description">Runs a service to receive Broadcast events.</string>

    <string name="subtitle_android">All Android Tasks</string>
    <string name="subtitle_iot">All Iot Tasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="trigger_explain">"Triggers are conditions that must be full filled before an Action can be executed."</string>
    <string name="action_explain">"Action is the task that will be executed when a Trigger condition is met."</string>
    <string name="review_task">Please review your task and provide a title to identify it</string>
    <string name="add_new_email">Add new email ID</string>
    <string name="add_email">Add New Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="empty_input">Please provide an email id and password</string>
    <string name="select_email">From: email</string>
    <string name="recipient_email_id">To: abc@example.com</string>
    <string name="send_email_description">Send Email</string>
    <string name="email_subject">Subject: </string>
    <string name="email_send">Send</string>
    <string name="email_body">Dear ...</string>
    <string name="email_from">"From: "</string>
    <string name="error_empty_field">Please fill all input fields</string>
    <string name="notification_description">S.A.P is running in the background</string>
    <string name="sms_received_description">SMS received</string>

    <string-array name="selection_type">
        <item name="select_iot">IOT</item>
        <item name="select_android">Android</item>
    </string-array>

    <string-array name="triggers">
        <item name="Bluetooth State">Bluetooth State</item>
        <item name="Time">Alarm Raised</item>
        <item name="Headset Plugged">Headset Plugged</item>
        <item name="WiFi State">WiFi State</item>
        <item name="Date">Date</item>
        <item name="SMS Received">SMS Received</item>
    </string-array>

    <string-array name="actions">
        <item name="Launch Application">Launch Application</item>
        <item name="Bluetooth State">Bluetooth State</item>
        <item name="WiFi State Change">WiFi State</item>
        <item name="Flashlight On">Flashlight On</item>
        <item name="Send Email">Send Email</item>
        <item name="Text to Speech">Text to Speech</item>
    </string-array>

    <string-array name="enable_disable">
        <item name="Enabled">Enabled</item>
        <item name="Disabled">Disabled</item>
    </string-array>

    <string-array name="airplane_mode_options">
        <item name="Airplane Mode Enabled">Airplane Mode Enabled</item>
        <item name="Airplane Mode Disabled">Airplane Mode Disabled</item>
    </string-array>

    <string-array name="battery_level">
        <item name="Battery Below 20%">Battery Below 20%</item>
        <item name="Battery Above 80%">Battery Above 80%</item>
    </string-array>

    <string-array name="WiFi_state_change">
        <item name="WiFi Enabled">WiFi Enabled</item>
        <item name="WiFi Disabled">WiFi Disabled</item>
    </string-array>

</resources>