<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SelectType"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/primary"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_android"
            android:textColor="@color/black"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_iot"
            android:textColor="@color/black"/>
    </RadioGroup>

</LinearLayout>